reorganisation of the folders to prepare the implementation of the interpreter

--- a/code-diver/package.json
+++ b/code-diver/package.json
@@ -36,16 +36,16 @@
       "title": "Open Sidebar View"
     },
     {
-      "command": "code-diver.menu.view",
+      "command": "code-diver.menu.close",
         "category": "code-diver-extension-sidebar-html",
-        "title": "Code Diver webview",
+        "title": "Code Diver Close Button",
         "icon": "$(clear-all)"
     }
    ],
    "menus": {
     "view/title": [
       {
-        "command": "code-diver.menu.view",
+        "command": "code-diver.menu.close",
         "group": "navigation",
         "when": "view == code-diver.openview"
       }
