--- a/code-diver/tsconfig.json
+++ b/code-diver/tsconfig.json
@@ -1,23 +1,25 @@
 {
 	"compilerOptions": {
+		"outDir": "./out",
+		"rootDir": "./extension-src",
 		"module": "commonjs",
-		"target": "ES2020",
-		"outDir": "out",
+		"target": "es2020",
 		"lib": [
-			"ES2020"
+			"es2020"
 		],
 		"sourceMap": true,
-		"rootDir": ".", // Set rootDir to project root to include all source files
-		"strict": true ,  /* enable all strict type-checking options */
+		"strict": true,
+		"esModuleInterop": true,
+		"skipLibCheck": true,
 		"allowImportingTsExtensions": true,
-        "noEmit": true
+		"noEmit": true
 	},
+	"include": [
+		"extension-src/**/*",
+		// "interpreter-src/**/*"
+	],
 	"exclude": [
 		"node_modules",
 		".vscode-test"
-	],
-	"include": [
-		"extension-src/**/*",
-		"interpreter-src/**/*"
 	]
 }
