--- a/code-diver/tsconfig.json
+++ b/code-diver/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"outDir": "./out",
-		"rootDir": "./extension-src",
+		"rootDir": ".",
 		"module": "commonjs",
 		"target": "es2020",
 		"lib": [
@@ -11,12 +11,10 @@
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"allowImportingTsExtensions": true,
-		"noEmit": true
 	},
 	"include": [
 		"extension-src/**/*",
-		// "interpreter-src/**/*"
+		"interpreter-src/**/*"
 	],
 	"exclude": [
 		"node_modules",
